# xcm-auto-bank

./: node_arch_functionality.drawio  para-2000-genesis  para-2000-wasm  para-2001-genesis  rococo-local-parachain-2000-raw.json  rococo-local-parachain-2001-raw.json  rococo-local-parachain-plain-alice-2000.json  rococo-local-parachain-plain-bob-2001.json  rococo-local-parachain-plain2000.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/common/: Cargo.toml
pallets/common/src/: lib.rs
pallets/xchange/: Cargo.toml
pallets/xchange-service/: Cargo.toml
pallets/xchange-service/src/: lib.rs
pallets/xchange/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: config.sh  init.sh  register.py
